--- a/src/app/view/authentification/login/login.component.html
+++ b/src/app/view/authentification/login/login.component.html
@@ -1,26 +1,27 @@
-<form>
+<form [formGroup]="formBuilderGroup" (ngSubmit)="signIn()">
 
     <div style="height: 30vh; display: flex;flex-direction: column;justify-content: space-evenly;align-items: flex-start;">
         <div style="width: 100%;">
             <mat-form-field style="width: 100%;" appearance="outline">
                 <mat-label>Enter your email</mat-label>
-                <input matInput placeholder="pat@example.com" required>
+                <input formControlName="username" ngModel matInput placeholder="pat@example.com">
+                <mat-error *ngIf="submitted && f.username.errors?.required">Email is required</mat-error>
             </mat-form-field>
         </div>
 
         <div style="width: 100%;">
             <mat-form-field style="width: 100%;" appearance="outline">
                 <mat-label>Enter your password</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'">
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
+                <input formControlName="password" ngModel matInput>
             </mat-form-field>
         </div>
 
 
         <div style="align-self: flex-end;width: 30%;">
-            <button mat-flat-button style="width: 100%;" color="primary">Login</button>
+            <button *ngIf="!isLoading" mat-flat-button style="width: 100%;" color="primary">Login</button>
+            <div style="width: 100%;display: flex;justify-content: center;">
+                <mat-spinner diameter="30" *ngIf="isLoading"></mat-spinner>
+            </div>
         </div>
     </div>
 
