--- a/src/app/view/authentification/authentification.component.html
+++ b/src/app/view/authentification/authentification.component.html
@@ -1,17 +1,19 @@
 <div style="height: 100%;display: flex;align-items: center;justify-content: center;">
 
-    <mat-tab-group style="height: 50%;width: 50%" dynamicHeight>
-        <mat-tab label="Login">
+    <div style="width: 50%;">
 
-            <app-login></app-login>
+        <mat-tab-group [(selectedIndex)]="selectedIndex" dynamicHeight>
 
-        </mat-tab>
+            <mat-tab label="Login">
+                <app-login></app-login>
+            </mat-tab>
 
-        <mat-tab label="Register">
-            <app-register></app-register>
-        </mat-tab>
+            <mat-tab label="Register">
+                <app-register (didSuccessfullyRegistred)="accountDidCreated()"></app-register>
+            </mat-tab>
 
-    </mat-tab-group>
+        </mat-tab-group>
 
+    </div>
 
 </div>
