chore: clean unused files

--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -8,9 +8,8 @@
 
         <p style="font-size: 18px;margin-top: 32px;">Event date:</p>
 
-        <mat-calendar [selected]="this.sampleRange" [comparisonStart]="this.sampleRange?.start" [comparisonEnd]="this.sampleRange?.end"></mat-calendar>
+        <mat-calendar [selected]="this.sampleRange" [comparisonStart]="this.sampleRange.start" [comparisonEnd]="this.sampleRange.end"></mat-calendar>
 
     </div>
-
 
 </div>
