chore: fix project structure

--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -74,6 +74,20 @@
 
     </mat-drawer>
 
+    <ul>
+
+        <li>
+            option 1
+        </li>
+        <li>
+            option 2
+        </li>
+
+        <li>
+            option 3
+        </li>
+    </ul>
+
     <mat-drawer-content>
 
         <div *ngIf="tabOption == 'home'">
